--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "elective-4-project",
-  "version": "1.0.0",
-  "description": "Elective 4 Project",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "turbo dev",
-    "build": "turbo build",
-    "start": "node ./apps/api/dist/main.js",
-    "format": "turbo format"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "workspaces": [
-    "apps/*"
-  ],
-  "devDependencies": {
-    "turbo": "^1.10.14"
+  "dependencies": {
+    "@types/node": "20.6.3",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.5.2",
+    "next": "13.5.2",
+    "postcss": "8.4.30",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
