--- a/package.json
+++ b/package.json
@@ -28,18 +28,21 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.4.2",
     "autoprefixer": "10.4.16",
     "eslint": "8.49.0",
+    "bcryptjs": "^2.4.3",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.6",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/node": "20.7.0",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.7",
