--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^5.4.2",
     "autoprefixer": "10.4.16",
-    "eslint": "8.49.0",
+    "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "sharp": "^0.32.6",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.4"
